proxies/ingress/k8s/proxy-networkpolicy.yaml
## Don't run this file
## This interrups all outgoing connections from other namespaces
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-same-namespace
  namespace: system-apps
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
